Trying Fix #10 for countdown timer not visible in deployment

--- a/css/style.css
+++ b/css/style.css
@@ -1494,6 +1494,10 @@ body.mobile-nav-active #mobile-nav-toggle {
     margin-top: 50rem;
   }
 
+  #about {
+    margin-top: 50rem;
+  }
+
   #about h3 {
     font-size: 1rem;
   }
